--- a/ARIMA/ARIMA_results.ipynb
+++ b/ARIMA/ARIMA_results.ipynb
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_1 = pd.read_csv('../web-traffic-time-series-forecasting/train_1.csv')\n",
+    "train_1 = pd.read_csv('../../web-traffic-time-series-forecasting/train_1.csv')\n",
     "data = data_per_date(train_1)"
    ]
   },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +165,8 @@
     "from statsmodels.tsa.arima_model import ARIMA\n",
     "import statsmodels.api as sm\n",
     "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "\n",
     "#resDiff = sm.tsa.arma_order_select_ic(my_page['count'],\\\n",
     "#                                      max_ar=7, max_ma=7, ic='aic', trend='c')\n",
